Fixed overlap with nav bug

--- a/src/css/style.css
+++ b/src/css/style.css
@@ -13,6 +13,7 @@ a{
   color: white;
   margin: 0;
   padding: 0;
+  z-index: -1;
 }
 
 #nav > ul{
